playbooks/15.istio-on-gke/go-web/app.yaml
##################################################################################################
# frontend service
##################################################################################################

---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: istio-workload
spec:
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  namespace: istio-workload
spec:
  replicas: 1
  template:
    metadata:
      namespace: istio-workload
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      # [START app_container]
      - name: frontend
        image: gcr.io/nmiu-play/go-web:latest
        imagePullPolicy: Always
        args: ["-backend", "backend:8000"]
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        - name: https
          containerPort: 10443
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          # httpGet:
          #   path: /liveness
          #   port: 8000
          #   scheme: HTTP
          exec: # mTLS is blocking kubelet from reaching the probes on the app serving port (https://github.com/istio/istio/issues/2628)
            command:
            - /bin/sh
            - -c
            - curl localhost:8000/liveness
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          # httpGet:
          #   path: /readiness
          #   port: 8000
          #   scheme: HTTP
          exec:
            command:
            - /bin/sh
            - -c
            - curl localhost:8000/readiness
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      # [END app_container]

---
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: istio-workload
spec:
  selector:
    app: backend
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-v1
  namespace: istio-workload
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
      # [START app_container]
      - name: backend
        image: gcr.io/nmiu-play/go-web:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        - name: https
          containerPort: 10443
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl localhost:8000/liveness
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl localhost:8000/readiness
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      # [END app_container]

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-v2
  namespace: istio-workload
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      containers:
      # [START app_container]
      - name: backend
        image: gcr.io/nmiu-play/go-web:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        - name: https
          containerPort: 10443
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl localhost:8000/liveness
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl localhost:8000/readiness
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      # [END app_container]
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: istio-workload
spec:
  ports:
  - name: mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb
  namespace: istio-workload
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
        version: v1
    spec:
      containers:
      # [START app_container]
      - name: mongodb
        image: gcr.io/nmiu-play/mongodb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: mongo
          protocol: TCP
          containerPort: 27017
      # [END app_container]
