playbooks/15.istio-on-gke/go-web/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-web-gateway
  namespace: istio-workload
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-web
  namespace: istio-workload
spec:
  hosts:
  - "*"
  gateways:
  - go-web-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /ping-backend
    - uri:
        prefix: /people
    - uri:
        prefix: /stress
    route:
    - destination:
        host: frontend
        port:
          number: 8000
