playbooks/15.istio-on-gke/go-web/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: istio-workload
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        subset: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: istio-workload
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongodb
  namespace: istio-workload
spec:
  hosts:
  - mongodb
  http:
  - route:
    - destination:
        host: mongodb
        subset: v1
